# LinkedIn-Agent

./: .gitignore  QUICKSTART.md  README.md
.claude/skills/render-video/: SKILL.md
backend/: main.py  pyproject.toml  test_auth.py  test_messaging_api.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  connection_request.py  contact.py  message.py  queue.py  resurrection.py  target_company.py  upload.py
backend/app/routes/: __init__.py  analytics.py  auth.py  contacts.py  followers.py  generate.py  inbox.py  queue.py  ranking.py  resurrection.py  target_companies.py  upload.py
backend/app/schemas/: __init__.py  connection_requests.py  contact.py  followers.py  inbox.py  message.py  queue.py  resurrection.py  target_company.py  upload.py
backend/app/services/: export_parser.py  follower_connector.py  inbox_service.py  linkedin_browser.py  linkedin_voyager.py  message_generator.py  queue_service.py  ranking_service.py  resurrection_scanner.py  segmenter.py  warmth_scorer.py
docs/: ARCHITECTURE.md  CHANGELOG.md  DECISIONS.md  LINKEDIN-AUTOMATION-GAPS.md  PROGRESS.md  PROJECT_SUMMARY.md  README.md  TODO.md  analytics-plan-phase7a.md  e2e-testing-phase6.md
docs/scraping-series/: 01-project-setup.md  02-playwright-basics.md  03-cookie-authentication.md  04-scraping-lists.md  05-anti-detection.md  06-pagination.md  07-profile-extraction.md  README.md
frontend/: index.html  package-lock.json
frontend/src/: App.tsx
frontend/src/api/: analytics.ts  (+10 more)
video/: package-lock.json  package.json
video/src/: DemoVideo.tsx  Root.tsx
(+30 files in other folders)
